# ROS2_robot

./: Dockerfile  README.md  start-vnc.sh
ros2_ws/install/: local_setup.sh  setup.sh
ros2_ws/install/raspbot_description/share/raspbot_description/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
ros2_ws/install/raspbot_description/share/raspbot_description/cmake/: raspbot_descriptionConfig-version.cmake  raspbot_descriptionConfig.cmake
ros2_ws/install/raspbot_description/share/raspbot_description/environment/: ament_prefix_path.dsv  path.dsv
ros2_ws/install/raspbot_description/share/raspbot_description/urdf/: raspbot.urdf.xacro
ros2_ws/install/raspbot_sim/share/raspbot_sim/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
ros2_ws/install/raspbot_sim/share/raspbot_sim/cmake/: raspbot_simConfig-version.cmake  raspbot_simConfig.cmake
ros2_ws/install/raspbot_sim/share/raspbot_sim/environment/: ament_prefix_path.dsv  path.dsv
ros2_ws/log/: latest_build
ros2_ws/src/: motor_test.py  motor_test_sim.py
ros2_ws/src/raspbot_description/: CMakeLists.txt
ros2_ws/src/raspbot_description/urdf/: raspbot.urdf.xacro
ros2_ws/src/raspbot_sim/: CMakeLists.txt  package.xml
ros2_ws/src/raspbot_sim/launch/: sim.launch.py
ros2_ws/src/raspbot_sim/models/raspbot/: model.config  model.sdf
ros2_ws/src/raspbot_sim/worlds/: raspbot_world.sdf
(+8 files in other folders)
